# remux-cli

./: Cargo.toml  install.sh
.github/workflows/: release.yml
src/: cloudflared.rs  config.rs  local.rs  main.rs  modal.rs  protocol.rs  server.rs  session.rs  shared_session.rs  tunnel.rs  uninstall.rs  update.rs
src/local/: input.rs  mod.rs  render.rs
