[package]
name = "remux-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
futures-util = "0.3.32"
portable-pty = "0.9.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread", "net", "sync", "signal", "io-util", "process", "time"] }
tokio-tungstenite = "0.29.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
